--- a/clause_classification_demo.ipynb
+++ b/clause_classification_demo.ipynb
@@ -122,7 +122,7 @@
       "source": [
         "import requests\n",
         "import openai\n",
-        "openai.api_key = \"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\"\n"
+        "openai.api_key = \"\"\n"
       ],
       "metadata": {
         "id": "z4qQl1HPjcGW"
