--- a/clause_classification_demo.ipynb
+++ b/clause_classification_demo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPBWAHcTruNzDG4BbfAnYcL",
+      "authorship_tag": "ABX9TyMrb6jKA95mXHpjctsd1I4u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,35 +32,10 @@
         "!pip install openai"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ORRjbkfkVSdP",
-        "outputId": "eae890bb-87ba-4647-f0b3-f4cfe3e9f6cd"
+        "id": "ORRjbkfkVSdP"
       },
-      "execution_count": 49,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: openai in /usr/local/lib/python3.10/dist-packages (0.28.1)\n",
-            "Requirement already satisfied: requests>=2.20 in /usr/local/lib/python3.10/dist-packages (from openai) (2.31.0)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from openai) (4.66.1)\n",
-            "Requirement already satisfied: aiohttp in /usr/local/lib/python3.10/dist-packages (from openai) (3.8.6)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests>=2.20->openai) (3.3.1)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests>=2.20->openai) (3.4)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.20->openai) (2.0.7)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.20->openai) (2023.7.22)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai) (23.1.0)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai) (6.0.4)\n",
-            "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai) (4.0.3)\n",
-            "Requirement already satisfied: yarl<2.0,>=1.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai) (1.9.2)\n",
-            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai) (1.4.0)\n",
-            "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai) (1.3.1)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -127,7 +102,7 @@
       "metadata": {
         "id": "z4qQl1HPjcGW"
       },
-      "execution_count": 14,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -152,7 +127,7 @@
       "metadata": {
         "id": "uGIjGNBDjnjt"
       },
-      "execution_count": 17,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -164,12 +139,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 89
+          "height": 53
         },
         "id": "OrMUVvF0ntk7",
-        "outputId": "23e916f4-5c35-451b-f170-52904bcb31f9"
+        "outputId": "fd9bcb48-1c89-45a2-aad2-699be68510f8"
       },
-      "execution_count": 44,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,25 +157,16 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "\"\\n#Label : Clause Licite\\n#Explication : Cette clause respecte les trois critères de licéité. Elle est limitée dans le temps (3 ans), dans l'espace (ensemble du territoire métropolitain français) et prévoit une contrepartie financière non conditionnelle (indemnité mensuelle équivalente à 30% du dernier salaire brut mensuel). Elle est donc conforme aux exigences légales.\""
+              "'\\nClause de confidentialité'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 55
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "VhsS8isLuI2s"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
